Website first attempt

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+    <title>Negative Sequence Records</title>
+    <meta name="description" content="Negative Sequence Records">
+    <meta name="author" content="Shallowed">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
+    <!-- The video -->
+    <video autoplay muted loop id="myVideo">
+        <source src="vhsglitch.mp4" type="video/mp4">
+    </video>
+
+    <img class="center" src="logo.svg"
+         height="500"
+         width="500" />
+    <script src="js/scripts.js"></script>
 </body>
 </html>
